Aye Aye, Captain!

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1,29 +1,19 @@
-@article{DBLP:journals/corr/Johnson-Roberson16,
-  author    = {Matthew Johnson{-}Roberson and
-               Charles Barto and
-               Rounak Mehta and
-               Sharath Nittur Sridhar and
-               Ram Vasudevan},
-  title     = {Driving in the Matrix: Can Virtual Worlds Replace Human-Generated
-               Annotations for Real World Tasks?},
+@article{DBLP:journals/corr/abs-1804-08150,
+  author    = {Amirhossein Tavanaei and
+               Masoud Ghodrati and
+               Saeed Reza Kheradpisheh and
+               Timoth{\'{e}}e Masquelier and
+               Anthony S. Maida},
+  title     = {Deep Learning in Spiking Neural Networks},
   journal   = {CoRR},
-  volume    = {abs/1610.01983},
-  year      = {2016},
-  url       = {http://arxiv.org/abs/1610.01983},
+  volume    = {abs/1804.08150},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1804.08150},
   archivePrefix = {arXiv},
-  eprint    = {1610.01983},
-  timestamp = {Wed, 07 Jun 2017 14:42:40 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/Johnson-Roberson16},
+  eprint    = {1804.08150},
+  timestamp = {Mon, 13 Aug 2018 16:46:04 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1804-08150},
   bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@article{vorpraktikum,
-  author    = {Patrick Deininger and
-               Kolja Esders and
-              Alexander Haas and
-               Florian Leicher},
-  title     = {3D Bounding Box Regression for Traffic Surveillance},
-  year      = {2017},
 }
 
 
