--- a/part2.tex
+++ b/part2.tex
@@ -79,6 +79,5 @@ The algorithm is shown below:
 		\ENDFOR
 	\end{algorithmic} 
 \end{algorithm}
+Since the simulation in our experiment is non-deterministic it should provide more stable results if the local region of an individual is evaluated more closely, before updating the synaptic weights.
 
-Since the simulation in our experiment is non deterministic it should provide more stable results that %if the local region... ?? vielleicht check ich aber auch den satz nicht :D %
-the local region of an individual is evaluated more closely, before the synaptic weights are updated, opposed to the strategy of section \ref{sec:strategie_2}.
