--- a/part3.tex
+++ b/part3.tex
@@ -23,7 +23,7 @@ The experiments were conducted with the following 4 different configurations:\\
 \item Configuration 1: 
 \begin{itemize}
 \item Output: 4 neurons to control 4 joints
-\item fix input of value 1
+\item fixed input of value 1
 \item result was not plotted, overall best distance: 25 meters
 \end{itemize}
 \item Configuration 2: 
@@ -43,9 +43,23 @@ The experiments were conducted with the following 4 different configurations:\\
 \end{itemize}
 \end{itemize}
 
-In general our algorithm was able to quickly find weights with high potential of great distances and even optimizing these weights as it would be desired. % Der nächste Satz stimmt so nicht mehr, nach were fehlt ein wort, unreproducible? 
-But many of those distances were due to instabilities of the distance calculation of the platform or bugs which occurred in the physics simulation. Therefore the best distances often were only rarely reproducible. Nevertheless the algorithm still performed well on the given prerequisites.
+In general our algorithm was able to quickly find weights with high potential of great distances and even optimizing these weights as it would be desired.
+But many of those distances were not reproducible due to instabilities of the distance calculation of the platform or bugs which occurred in the physics simulation. Therefore the best distances often were only rarely reproducible. Nevertheless the algorithm still performed well on the given prerequisites.
 
+\section{Results for evolutionary approach 2}
+The second evolutionary approach was only conducted once with the following configuration:
+\begin{itemize}
+	\item Output: 7 neurons, 7 Joints and scaled output weights 
+	\item Input: fixed input of value 1
+\end{itemize}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=3.3in]{img/approach2.png}
+	\DeclareGraphicsExtensions.
+	\caption{Results of the second evolutionary strategy}
+	\label{fig:results_2}
+\end{figure}
+We chose a population size of 20 and ran the experiment for 20 generations. The training achieved a high distance early in the second generation which was due to the unstable physics simulation of the robot arm. Nevertheless the network was able to reproduce this error several times in the following generations. The results can be seen in Fig. \ref{fig:results_2}.
 
 \section{Conclusion}
 A brief introduction into genetic algorithms, reinforcement learning and spiking neural networks was given and the reason for the algorithm choice of the given task was elaborated in this paper. The different approaches were described theoretically and problems were discussed. We confirmed that the proposed method learns a set of weights with high potential in acceptable time. Finally the results are given for each of the approaches and its sub-configurations and an interpretation of those was given.
