correction done of part1.tex

--- a/part3.tex
+++ b/part3.tex
@@ -4,9 +4,9 @@
 \section{Results for evolutionary approach 1}
 \label{sec:results_1}
 
-Like in section \ref{sec:challenges} already mentioned unstable simulation results and non-reproducibility were encountered, which make it hard to interpret the results. Thus, good weights are interpreted mostly as weights with a high potential for a good reward.\\
+Like in Section \ref{sec:challenges} already mentioned unstable simulation results and non-reproducibility were encountered, which make it hard to interpret the results. Thus, good weights are interpreted mostly as weights with a high potential for a good reward.\\
 The same evolutionary algorithm was tested with slightly different configurations concerning hyper-parameters. 
-The best distances within every generation were plotted with a logarithmic scale and can be seen in Fig. \ref{fig:results_1}. 
+The best distances within every generation for different lengths of training periods and a population size within every generation of 30, were plotted with a logarithmic scale and can be seen in Fig. \ref{fig:results_1}. 
 
 \begin{figure}[H]
 	\centering
@@ -63,4 +63,4 @@ We chose a population size of 20 and ran the experiment for 20 generations. The 
 
 \section{Conclusion}
 A brief introduction into genetic algorithms, reinforcement learning and spiking neural networks was given and the reason for the algorithm choice of the given task was elaborated in this paper. The different approaches were described theoretically and problems were discussed. We confirmed that the proposed method learns a set of weights with high potential in acceptable time. Finally the results are given for each of the approaches and its sub-configurations and an interpretation of those was given.
-Future research can be done on other learning strategies or optimizing the hyper-parameters for the evolutionary strategy 2, elaborated in section \ref{sec:strategie_2}.
+Future research can be done on other learning strategies or optimizing the hyper-parameters for the evolutionary strategy 2, elaborated in Section \ref{sec:strategie_2}.
