--- a/part2.tex
+++ b/part2.tex
@@ -48,7 +48,7 @@ As you can see in figure \ref{fig:test_function}, once a good starting point is 
 	\label{fig:test_function}
 \end{figure}
 
-The overall idea behind the final algorithm for our first evolutionary strategy itself can be seen in figure \ref{fig:evo_strat_1}. The basic strategy to make sure that the algorithm converges as fast as possible, is to change the weights not only randomly but in the direction where the highest improvement is to be expected. Hence, the set of weights at iteration k is expected to increase the reward if the difference to the last reward is positive. In this case the normalized distance from the weights $w_k$  at the current iteration to $w_{k-1}$ from the last iteration is added to the weights of the next iteration. Otherwise the distance is subtracted. To add a certain randomness to the algorithm, a merge of different sets of weights every 10th epoch is implemented by fusing a random amount of weights in several dimensions. This randomness was added in order to avoid to get stuck in local maxima or in case that high potentially areas in the feature space are too far away from the current position of the weights. After every generation of the population of weights, the learning rate is decreased to scan the feature space more precisely for the best result. 
+The overall idea behind the final algorithm for our first evolutionary strategy itself can be seen in Fig. \ref{fig:evo_strat_1}. The basic strategy to make sure that the algorithm converges as fast as possible, is to change the weights not only randomly but in the direction where the highest improvement is to be expected. Hence, the set of weights at iteration k is expected to increase the reward if the difference to the last reward is positive. In this case the normalized distance from the weights $w_k$  at the current iteration to $w_{k-1}$ from the last iteration is added to the weights of the next iteration. Otherwise the distance is subtracted. To add a certain randomness to the algorithm, a merge of different sets of weights every 10th epoch is implemented by fusing a random amount of weights in several dimensions. This randomness was added in order to avoid to get stuck in local maxima or in case that high potentially areas in the feature space are too far away from the current position of the weights. After every generation of the population of weights, the learning rate is decreased to scan the feature space more precisely for the best result. 
 The results of the presented approach are discussed in section\ref{sec:results}.
 
 \begin{figure}[H]
